correction z-index

--- a/voyage de chihiro/styles/accueil.css
+++ b/voyage de chihiro/styles/accueil.css
@@ -9,8 +9,7 @@ body{
   align-items: center;
   height: 100%;
   width: 100%;
-  perspective: 8px;
-  perspective-origin: 0%;
+  z-index: 0;
 }
 
 .background {
@@ -24,8 +23,7 @@ body{
 .foreground {
   margin-top: auto;
   margin-bottom: 50px;
-  transform-origin: 0;
-  /*transform: translateZ(3px) scale(0.625);*/
+  z-index:2;
 }
 
 .background_image{
